# hildies-python-monorepo

./: .bazelrc  .gitignore  .pre-commit-config.yaml  BUILD.bazel  DEPENDENCY_MANAGEMENT.md  EXAMPLE_NEW_PACKAGE.md  MODULE.bazel  README.md  lock_requirements.txt  pyproject.toml  requirements_docs_lock.txt  requirements_lock.txt  test_all.sh
.github/workflows/: bazel.yml  docs.yml  publish.yml
docs/: BINDINGS_TESTS_AND_EXAMPLES.md  BUILD.bazel  DEPLOYMENT.md  GHA_BAZEL_BUILD.md  HILDIE_NAMESPACES.md  MAVEN_SETUP.md  PUBLISHING_GUIDE.md  PYTHON_BINDINGS.md  README.md  REFACTORING_SUMMARY.md  TESTING.md  lock_requirements.txt  pyproject.toml  requirements.txt  requirements_lock.txt
docs/source/: api.rst  conf.py  index.rst  packages.rst
source/hildie/: check_unittest_super.py
source/hildie/bindings/: BUILD.bazel  Cargo.toml  pyproject.toml
source/hildie/bindings/python/: BUILD.bazel  README.md  TESTING.md  pyproject.toml
source/hildie/bindings/python/examples/: Interactive_Demo.ipynb  __init__.py  bindings_demo.py  ipython_demo.py
source/hildie/bindings/python/hildie_bindings/: __init__.py  cpp_bindings.py  go_bindings.py
source/hildie/bindings/python/tests/: BUILD.bazel  __init__.py  test_bindings.py
source/hildie/bindings/src/: lib.rs
source/hildie/cpp/: BUILD.bazel  EXAMPLES.md  example.cpp  hildie.cpp  hildie.h
source/hildie/go/: BUILD.bazel  go.mod
source/hildie/go/app/: BUILD.bazel  main.go
source/hildie/go/cli/: BUILD.bazel  main.go
source/hildie/go/lib/: BUILD.bazel  lib.go  lib_test.go
source/hildie/hildie_app/: __init__.py
source/hildie/hildie_archive_git_forks/: __init__.py
source/hildie/hildie_cli/: __init__.py
source/hildie/hildie_library/: __init__.py
source/hildie/java/: BUILD.bazel
source/hildie/java/hildie-java-app/: BUILD.bazel
source/hildie/java/hildie-java-app/src/main/java/io/hildie/: HildieApp.java
source/hildie/java/hildie-java-cli/: BUILD.bazel
source/hildie/java/hildie-java-cli/src/main/java/io/hildie/cli/: HildieCli.java
source/hildie/java/hildie-java-lib/: BUILD.bazel  pom.xml
source/hildie/java/hildie-java-lib/src/main/java/io/hildie/: HildieLibrary.java
source/hildie/java/hildie-java-lib/src/test/java/io/hildie/: HildieLibraryTest.java
source/hildie/node/: BUILD.bazel  package-lock.json  package.json
source/hildie/node/src/: app.ts  cli.ts  index.ts  lib.test.ts  lib.ts
source/hildie/rust/: BUILD.bazel  Cargo.toml
source/hildie/rust/hildie-app/: BUILD.bazel  Cargo.toml
source/hildie/rust/hildie-app/src/: main.rs
source/hildie/rust/hildie-cli/: BUILD.bazel  Cargo.toml
source/hildie/rust/hildie-cli/src/: main.rs
source/hildie/rust/hildie-lib/: BUILD.bazel  Cargo.toml
source/hildie/rust/hildie-lib/src/: lib.rs
source/python/: BUILD.bazel  VERSION_MANAGEMENT.md  build_bindings.py  go_test_wrapper.sh  hildie.bzl  java_test_wrapper.sh  node_test_wrapper.sh  pytest.bzl  regenerate_requirements.py  rust_test_wrapper.sh  test.bzl  test_runners.py  update_version.py
