[project]
name = "hildie"
description = "A collection of Python utilities and tools, named after the best dog"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Clinton Steiner", email = "clintonsteiner@gmail.com"}
]
maintainers = [
    {name = "Clinton Steiner", email = "clintonsteiner@gmail.com"}
]
keywords = ["utilities", "tools", "monorepo", "bazel"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11"
dependencies = [
    "click",
    "requests",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/clintonsteiner/python-monorepo"
Repository = "https://github.com/clintonsteiner/python-monorepo"
Issues = "https://github.com/clintonsteiner/python-monorepo/issues"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["hildie"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v"
testpaths = ["packages"]
python_files = ["test_*.py"]
