"""Documentation build configuration."""

filegroup(
    name = "docs",
    srcs = glob(
        ["*.md"],
        allow_empty = True,
    ),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "docs_config",
    srcs = [
        "pyproject.toml",
    ],
    visibility = ["//visibility:public"],
)
