[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hildie-docs"
version = "0.2.21"
description = "Hildie monorepo documentation"
authors = [{name = "Hildie Contributors", email = "contributors@hildie.dev"}]
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
    "sphinx-autodoc-typehints>=1.20",
    "myst-parser>=0.18",
]

[tool.sphinx]
source_dir = "."
build_dir = "_build"
