[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hildie-docs"
version = "0.2.21"
description = "Hildie monorepo documentation"
authors = [{name = "Hildie Contributors", email = "contributors@hildie.dev"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
]

[tool.sphinx]
source_dir = "source"
build_dir = "_build"
