[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "hildie-bindings"
version = "0.1.0"
description = "Python bindings for Hildie Go, Rust, and C++ components"
authors = [{name = "Hildie Contributors"}]
license = "MIT"
requires-python = ">=3.9"

[tool.maturin]
python-source = "python"
module-name = "hildie_bindings"
features = ["pyo3/extension-module"]
